--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,9 @@
     </title>
   </head>
   <body>
-    HELLO WORLD
+    HELLO WORLD!
+    <p>
+    A change has been made!
+    </p>
   </body>
 </html>
